Fix old method replacement in ResolvedMethodTable

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 13
    • Affects Version/s: 13
    • Component/s: hotspot
    • None
    • b16

      After the ResolvedTable_lock is taken, we need to check if the Method that we're adding has been redefined. The code in ResolvedMethodTable::add_method() checks for redefined or deleted method. It used method_idnum() rather than orig_method_idnum() for the replacement though the new function Method::get_new_method().

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: