8221992: Fix old method replacement in ResolvedMethodTable

Use method get_new_method() which is used in other call sites.

Reviewed-by: sspitsyn